# indexed_gzip

./: .coveragerc  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.ci/: build_dev_indexed_gzip_fileobj_fork_epicfaace.sh  build_test_wheel.sh  build_wheels.sh  create_test_env.sh  install_vcpython27.sh  run_tests.sh
.github/workflows/: master.yaml  pull_request.yaml  release.yaml  tag.yaml
indexed_gzip/: notes.md  zran_file_util.c  zran_file_util.h  zran_file_util.pxd
indexed_gzip/tests/: benchmark.py  conftest.py  ctest_indexed_gzip.c  ctest_indexed_gzip.pyx  ctest_zran.pyx  test_zran.py
indexed_gzip_fileobj_fork_epicfaace/: __init__.py  indexed_gzip_fileobj_fork_epicfaace.pyx  notes.md  zran.c  zran.h
indexed_gzip_fileobj_fork_epicfaace/tests/: benchmark.py  benchmark_bandwidth.py  ctest_indexed_gzip_fileobj_fork_epicfaace.pyx  ctest_zran.pyx  test_indexed_gzip_fileobj_fork_epicfaace.py  test_indexed_gzip_fileobj_fork_epicfaace_threading.py  test_nibabel_integration.py
