[build-system]
requires = ["setuptools >= 40.8.0", "cython", "numpy"]

[tool.pytest.ini_options]
testpaths = ["indexed_gzip_fileobj_fork_epicfaace/tests"]
addopts = "-v"
markers = [
    "zran_test:         Test the zran.c library",
    "indexed_gzip_fileobj_fork_epicfaace_test: Test the indexed_gzip_fileobj_fork_epicfaace library",
    "nibabel_test:      Test interaction between indexed_gzip_fileobj_fork_epicfaace and nibabel/numpy",
    "slow_test:         Test which takes a long time"]
